# search_app

./: .env  Makefile  README.md  config.py  main.py  pyproject.toml
routes/: search.py  static.py
schemas/: search.py
services/: load_data_service.py  search_service.py
tests/integration/: test_search_route.py
tests/unit/: test_load_data.py  test_search_service.py
